@@ -1,6 +1,6 @@
 #!/bin/sh
 # -*- coding: utf-8 -*-
-# Copyright (C) 2012-2019 Laboratoire de Recherche et Développement de
+# Copyright (C) 2012-2020 Laboratoire de Recherche et Développement de
 # l'Epita (LRDE).
 #
 # This file is part of Spot, a model checking library.
@@ -347,3 +347,8 @@ grep 'max-edges.*incompatible' stderr
 ltlcross -f a ltl2tgba --determinize-max-edges=10 --determinize  2>stderr &&
     exit 1
 grep 'max-edges.*incompatible' stderr
+
+# Make sure save-inclusion-products outputs the expected number of products.
+ltlcross ltl2tgba 'ltl2tgba -D' -f GFa -f FGa \
+         --verbose --save-inclusion-products=prod.hoa
+test 12 = `autfilt -c prod.hoa`
